comment html code

--- a/23_paskaita/index.html
+++ b/23_paskaita/index.html
@@ -47,14 +47,24 @@
         </tr>
       </thead>
       <tbody id="users">
-        <tr>
+        <!-- <tr>
           <td>Vilnius</td>
           <td>CodeAcademy</td>
           <td>rokas@gmail.com</td>
-        </tr>
+        </tr> -->
       </tbody>
     </table>
 
-    <section class="cards"></section>
+    <section class="cards">
+      <!-- <div class="card">
+        <img
+          src="https://g4.dcdn.lt/images/pix/vyras-81892715.jpg"
+          alt="person"
+        />
+        <h3>Rokas Rokelis</h3>
+        <p style="color: grey">rokas@gmail.com</p>
+        <p style="color: green">Vilnius</p>
+      </div> -->
+    </section>
   </body>
 </html>
