--- a/25_paskaita/index.html
+++ b/25_paskaita/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo list</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <div class="center">
-      <div class="todo-container"></div>
+      <div class="todo-container">
+        <div class="todo-input">
+          <input
+            type="text"
+            name="todo-text"
+            placeholder="What you need todo..."
+          />
+          <button class="add-button">Add</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
