add event listeners examples

--- a/Kartojimas/index.html
+++ b/Kartojimas/index.html
@@ -8,11 +8,30 @@
     <script src="./dom.js" defer></script>
   </head>
   <body>
-    <!-- <div>Mano naujas divas</div> -->
-    <h2 id="name"></h2>
+    <!-- <h2 id="name"></h2>
     <h2 id="greeting"></h2>
-    <section id="text"></section>
+    <section id="text"></section> -->
+    <!-- <button id="my-button">Paspausk mane</button>
+    <p id="count">0</p>
+    <p id="result"></p>
 
-    <!-- <div>Mano naujas divas</div> -->
+    <button id="show-name">Show my name</button>
+    <p id="name"></p>
+
+    <button id="plus">+</button>
+    <button id="minus">-</button>
+    <h2 id="result-number">0</h2>
+
+    <button id="plus500">+500</button>
+    <button id="minus500">-500</button>
+    <button id="reset500">Reset</button>
+    <h2 id="result500-number">0</h2> -->
+    <form id="register">
+      <input type="text" name="username" placeholder="Username..." />
+      <input type="email" name="email" placeholder="Email..." />
+      <input type="number" name="age" placeholder="Age..." />
+      <input type="password" name="password" placeholder="Password..." />
+      <input type="submit" />
+    </form>
   </body>
 </html>
