Add delete button with DELETE method

--- a/25_paskaita/index.html
+++ b/25_paskaita/index.html
@@ -11,6 +11,14 @@
   <body>
     <div class="center">
       <div class="todo-container">
+        <div class="todo">
+          <p class="todo-title">Test new</p>
+          <div class="todo-actions">
+            <span class="todo-status"></span>
+            <button class="todo-delete">Delete</button>
+          </div>
+        </div>
+
         <div class="todo-input">
           <input
             type="text"
